--- a/css/style.css
+++ b/css/style.css
@@ -2,5 +2,5 @@ body{
     display: flex;
     align-items: center;
     flex-direction: column;
-    background: url(https://wallpaperaccess.com/full/2454628.png);
+    background: url(https://wallpaperaccess.com/full/2454628.png) no-repeat fixed center;
 }
